make the numpad display long numbers. scroll the text view. shrink the text columns in the tables

--- a/res/layout/dialog_number_picker.xml
+++ b/res/layout/dialog_number_picker.xml
@@ -12,12 +12,15 @@
         <TextView
             style="@style/NumberPickerTextValue"
             android:id="@+id/value"
+            android:lines="1"
+            android:scrollbars="vertical|horizontal"
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2" />
         
         <ImageButton
             style="@style/NumberPickerButton"
+            android:contentDescription="@string/number_dialog_delete"
             android:id="@+id/delete"
             android:src="@drawable/ic_backspace" />
         
