--- a/res/layout/torrent_detail_overview.xml
+++ b/res/layout/torrent_detail_overview.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_have" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_have" />
 
             <TextView android:id="@+id/torrent_have" />
         </TableRow>
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_availability" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_availability" />
 
             <TextView android:id="@+id/torrent_availability" />
         </TableRow>
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_downloaded" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_downloaded" />
 
             <TextView android:id="@+id/torrent_downloaded" />
         </TableRow>
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_uploaded" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_uploaded" />
 
             <TextView android:id="@+id/torrent_uploaded" />
         </TableRow>
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_state" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_state" />
 
             <TextView android:id="@+id/torrent_state" />
         </TableRow>
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_running_time" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_running_time" />
 
             <TextView android:id="@+id/torrent_running_time" />
         </TableRow>
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_remaining_time" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_remaining_time" />
 
             <TextView android:id="@+id/torrent_remaining_time" />
         </TableRow>
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_last_activity" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_last_activity" />
 
             <TextView android:id="@+id/torrent_last_activity" />
         </TableRow>
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_error" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_error" />
 
             <TextView android:id="@+id/torrent_error" />
         </TableRow>                                                                                                    
@@ -129,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_size" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_size" />
 
             <TextView android:id="@+id/torrent_size" />
         </TableRow>
@@ -138,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_location" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_location" />
 
             <TextView android:id="@+id/torrent_location" />
         </TableRow>
@@ -147,7 +147,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_hash" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_hash" />
 
             <TextView android:id="@+id/torrent_hash" />
         </TableRow>
@@ -156,7 +156,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_privacy" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_privacy" />
 
             <TextView android:id="@+id/torrent_privacy" />
         </TableRow>
@@ -165,7 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_origin" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_origin" />
 
             <TextView android:id="@+id/torrent_origin" />
         </TableRow>
@@ -174,7 +174,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <TextView android:text="@string/torrent_comment" />
+            <TextView style="@style/TorrentDetailTextColumn" android:text="@string/torrent_comment" />
 
             <TextView android:id="@+id/torrent_comment" />
         </TableRow>
