--- a/res/xml/general_preferences.xml
+++ b/res/xml/general_preferences.xml
@@ -22,5 +22,19 @@
 	        android:entryValues="@array/pref_update_interval_values"
 	        android:defaultValue="1" />
     </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:title="@string/torrents">
+        
+        <CheckBoxPreference
+            android:key="start_paused"
+            android:title="@string/start_paused"
+            android:defaultValue="false" />
+        
+        <CheckBoxPreference
+            android:key="delete_local_torrent_file"
+            android:title="@string/delete_local_torrent_file"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
