--- a/res/menu/torrent_detail_fragment.xml
+++ b/res/menu/torrent_detail_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-        <item android:id="@+id/resume"
+    <item android:id="@+id/resume"
 	    android:title="@string/resume"
 	    android:icon="@drawable/ic_menu_resume"
 	    android:showAsAction="always" />
@@ -18,5 +18,5 @@
 	<item android:id="@+id/delete"
 	    android:title="@string/remove_data"
 	    android:icon="@drawable/ic_menu_trash_holo_dark"
-	    android:showAsAction="always|withText" />
+	    android:showAsAction="ifRoom" />
 </menu>
