--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
+    android:paddingStart="16dip"
+    android:paddingEnd="16dip"
+	android:padding="8dp"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:gravity="center_vertical"        
@@ -13,14 +14,14 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceListItem"
         android:textStyle="bold" />
     
     <TextView
         android:id="@+id/traffic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 
     <ProgressBar
         android:id="@+id/progress"
@@ -30,24 +31,11 @@
         android:indeterminate="false"
         android:max="100"
         android:progress="0" />
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        
-        <TextView
-            android:id="@+id/status"
-            android:textStyle="bold"
-			android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-            android:textAppearanceSmall="?android:attr/textAppearanceSmall" />
-        
-        <TextView
-            android:id="@+id/status_more"
-			android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-            android:textAppearanceSmall="?android:attr/textAppearanceSmall" />
-    </LinearLayout>
+            
+    <TextView
+        android:id="@+id/status"
+		android:layout_width="wrap_content"
+     	android:layout_height="wrap_content"
+        android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall" />
 
 </LinearLayout>
