--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     android:paddingStart="16dip"
     android:paddingEnd="16dip"
-	android:padding="8dp"
+	android:paddingTop="8dp"
+	android:paddingBottom="8dp"
+	android:paddingLeft="16dp"
+	android:paddingRight="16dp"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:gravity="center_vertical"        
