drawable for the progress bar

--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="false"
+        android:progressDrawable="@drawable/torrent_progress_bar"
         android:max="100"
         android:progress="0" />
             
