--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -9,7 +9,7 @@
 	android:paddingLeft="16dp"
 	android:paddingRight="16dp"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:background="@drawable/list_activated_holo_light"
     android:gravity="center_vertical"        
     android:orientation="vertical" >
     
@@ -38,7 +38,7 @@
             
     <TextView
         android:id="@+id/status"
-		android:layout_width="wrap_content"
+        android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
         android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall" />
 
