--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -18,13 +18,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceListItem"
+        android:textSize="16sp"
         android:textStyle="bold" />
     
     <TextView
         android:id="@+id/traffic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+        android:textAppearance="?android:attr/textAppearanceListItemSmall"
+        android:textSize="10sp" />
 
     <ProgressBar
         android:id="@+id/progress"
