--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="sliding_menu_offset">280dp</dimen>
     <dimen name="list_padding">10dp</dimen>
     <dimen name="shadow_width">15dp</dimen>
+    
+    <dimen name="torrent_list_name_text_size">16sp</dimen>
+    <dimen name="torrent_list_traffic_text_size">10sp</dimen>
+    <dimen name="torrent_list_status_text_size">12sp</dimen>
 </resources>
