domain move part2

--- a/res/layout/activity_torrent_twopane.xml
+++ b/res/layout/activity_torrent_twopane.xml
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/torrent_list"
-        android:name="us.supositi.gearshift.TorrentListFragment"
+        android:name="org.sugr.gearshift.TorrentListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
