--- a/res/layout/activity_torrent_list.xml
+++ b/res/layout/activity_torrent_list.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/torrent_list"
-    android:name="us.supositi.gearshift.TorrentListFragment"
+    android:name="org.sugr.gearshift.TorrentListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TorrentListActivity"
