--- a/res/layout/sliding_menu_frame.xml
+++ b/res/layout/sliding_menu_frame.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/torrent_list_menu"
-        android:name="us.supositi.gearshift.TorrentListMenuFragment"
+        android:name="org.sugr.gearshift.TorrentListMenuFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_torrent_list_menu" />
