--- a/res/layout/activity_torrent_detail.xml
+++ b/res/layout/activity_torrent_detail.xml
@@ -1,5 +1,5 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/torrent_detail_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/torrent_detail_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
