--- a/res/layout/menu_list_footer.xml
+++ b/res/layout/menu_list_footer.xml
@@ -3,26 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="16dp"
+    android:clickable="false"
     android:orientation="vertical" >
-    
-	<TextView
+
+    <TextView
         android:id="@+id/status"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="@string/status"
+        android:padding="4dp"
+        android:background="@android:drawable/dark_header"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-	
+
     <TextView
         android:id="@+id/status_speed"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/speed_format"
         android:paddingLeft="8dp"
+        android:lineSpacingMultiplier="1.5"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-    
+
     <TextView
         android:id="@+id/status_free_space"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/free_space_format"
         android:paddingLeft="8dp"
