--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -72,6 +72,7 @@
         <item>30 seconds</item>
         <item>Every minute</item>
         <item>2 minutes</item>
+        <item>Never</item>
     </string-array>
     
     <string-array name="pref_update_interval_values" translatable="false">
@@ -82,6 +83,7 @@
         <item>30</item>
         <item>60</item>
         <item>120</item>
+        <item>-1</item>
     </string-array>
     
     <string-array name="pref_con_retries_entries">
