--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -17,6 +17,7 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
         android:textAppearance="?android:attr/textAppearanceListItem"
         android:textSize="@dimen/torrent_list_name_text_size"
         android:textStyle="bold" />
@@ -25,6 +26,7 @@
         android:id="@+id/traffic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textSize="@dimen/torrent_list_traffic_text_size" />
 
@@ -42,6 +44,7 @@
         android:id="@+id/status"
         android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
         android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
         android:textSize="@dimen/torrent_list_status_text_size" />
 
