--- a/res/layout/fragment_torrent_detail_page.xml
+++ b/res/layout/fragment_torrent_detail_page.xml
@@ -16,6 +16,7 @@
 
         <TextView
             android:id="@+id/torrent_detail_title"
+            android:fontFamily="sans-serif-condensed"
             style="@style/TorrentTitle" />
 
         <include layout="@layout/torrent_detail_overview" />
