--- a/res/layout/fragment_torrent_list_menu.xml
+++ b/res/layout/fragment_torrent_list_menu.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:orientation="vertical" >
 
     <ListView
