--- a/res/layout/menu_list_header.xml
+++ b/res/layout/menu_list_header.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@android:drawable/dark_header"
-    android:padding="4dp"
-    android:id="@+id/filter_header"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/filter_header"
-    android:textAppearance="?android:attr/textAppearanceSmall" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+        
+	<TextView
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:background="@drawable/border_bottom_inverted"
+	    android:padding="4dp"
+	    android:id="@+id/filter_header"
+	    android:fontFamily="sans-serif-condensed"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/filter_header"
+	    android:textAppearance="?android:attr/textAppearanceSmall" />
+</FrameLayout>
