--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -54,6 +54,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#900000</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:layout_marginRight">40dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -93,6 +94,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:padding">8dp</item>
         <item name="android:background">@drawable/border_bottom</item>
         <item name="android:layout_marginTop">4dp</item>
@@ -113,7 +115,9 @@
     <style name="TorrentDetailTextColumn">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingRight">8dp</item>
         <item name="android:textSize">13sp</item>
     </style>
 </resources>
