this should definitely be white

--- a/res/drawable/border_bottom.xml
+++ b/res/drawable/border_bottom.xml
@@ -7,7 +7,7 @@
 	</item>
 	<item android:bottom="2dp">
 	    <shape android:shape="rectangle">
-	        <solid android:color="#f6f6f6" />
+	        <solid android:color="#fff" />
 	    </shape>
 	</item>
 </layer-list>
