--- a/res/layout/torrents_listview.xml
+++ b/res/layout/torrents_listview.xml
@@ -10,6 +10,7 @@
     <TextView android:id="@+android:id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="sans-serif-light"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:gravity="center"
