fix the menu padding

--- a/res/layout/menu_list_header.xml
+++ b/res/layout/menu_list_header.xml
@@ -2,8 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="8dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp">
         
 	<TextView
 	    xmlns:android="http://schemas.android.com/apk/res/android"
