--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="filter_list_entries">
-        <item>@string/filter_all</item>
-        <item>@string/filter_downloading</item>
-        <item>@string/filter_seeding</item>
-        <item>@string/filter_paused</item>
-        <item>@string/filter_complete</item>
-        <item>@string/filter_incomplete</item>
-        <item>@string/filter_active</item>
-        <item>@string/filter_checking</item>
+        <item>Filters</item>
+        <item>All</item>
+        <item>Downloading</item>
+        <item>Seeding</item>
+        <item>Paused</item>
+        <item>Complete</item>
+        <item>Incomplete</item>
+        <item>Active</item>
+        <item>Checking</item>
+        <item>Sort By</item>
+        <item>Name</item>
+        <item>Size</item>
+        <item>Status</item>
+        <item>Activity</item>
+        <item>Age</item>
+        <item>Progress</item>
+        <item>Ratio</item>
+        <item>Location</item>
+        <item>Peers</item>
+        <item>Download speed</item>
+        <item>Upload speed</item>
+        <item>Queue</item>
+        <item>Order</item>
+        <item>Descending</item>
     </string-array>
     
     <string-array translatable="false" name="filter_list_entry_values">
+        <item></item>
         <item>filter:all</item>
         <item>filter:downloading</item>
         <item>filter:seeding</item>
@@ -20,7 +37,28 @@
         <item>filter:incomplete</item>
         <item>filter:active</item>
         <item>filter:checking</item>
+        <item></item>
+        <item>sortby:name</item>
+        <item>sortby:size</item>
+        <item>sortby:status</item>
+        <item>sortby:activity</item>
+        <item>sortby:age</item>
+        <item>sortby:progress</item>
+        <item>sortby:ratio</item>
+        <item>sortby:location</item>
+        <item>sortby:peers</item>
+        <item>sortby:rate_download</item>
+        <item>sortby:rate_upload</item>
+        <item>sortby:queue</item>
+        <item></item>
+        <item>sortorder:descending</item>
     </string-array>
+    
+    <integer name="filter_name_start">1</integer>
+    <integer name="filter_name_length">8</integer>
+    <integer name="filter_sort_start">10</integer>
+    <integer name="filter_sort_length">12</integer>
+    <integer name="filter_sort_order">23</integer>
     
     <string-array name="torrent_priority">
         <item>Low</item>
