add a way for the detail fragment to notify of refresh events
send the status change flag from the loader

--- a/res/menu/torrent_detail_activity.xml
+++ b/res/menu/torrent_detail_activity.xml
@@ -3,7 +3,7 @@
      <item android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_menu_refresh"
         android:visible="true"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:menuCategory="system"
         android:orderInCategory="1"
         android:title="@string/refresh"
