--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -109,7 +109,8 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">4dp</item>
-        <item name="android:padding">4dp</item>        
+        <item name="android:padding">4dp</item>
+        <item name="android:selectAllOnFocus">true</item>
     </style>
     
     <style name="TorrentDetailTextColumn">
